Fix HOME tab spacing issue in mobile navigation only

--- a/css/style.css
+++ b/css/style.css
@@ -1297,14 +1297,12 @@ fieldset {
     }
     #profilediv {
         width: 50%;
-        text-align: center;
+        text-align: right;
         order: 2;
     }
     #profilepic {
         width: 220px;
-        margin: 0 auto;
-        position: relative;
-        right: 2px;
+        margin: 0;
         order: 2;
     }
     /* Skills section tablet */
@@ -1379,14 +1377,12 @@ fieldset {
     }
     #profilediv {
         width: 50%;
-        text-align: center;
+        text-align: right;
         order: 2;
     }
     #profilepic {
         width: 260px;
-        margin: 0 auto;
-        position: relative;
-        left: 20px;
+        margin: 0;
         order: 2;
     }
     /* Skills section large mobile */
